src/styles/Main.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: Arial, Helvetica, sans-serif;
    /* vertical-align: top;
    align-items: center; */
    /* justify-content: center; */
    /* display: inline-block; */
}
.body{
    background-color: #2d3646;
    height: 100vh;
    /*align-items: center;*/
    text-align: center;
    overflow-y: hidden;
}
/* .Background {
    background-color: #2d3646;
} */
.Main {
    /* text-align: center; */
    /* background-color: #2d3646; */
    height: 100vh;
    /*align-items: center;*/
    text-align: center;
    overflow-y: scroll;
    /*justify-content: center; */
}
.Main-header {
    /* justify-content: center; */
    font-size: calc(10px + 4vmin);
    font-weight: 900;
    -webkit-text-stroke: 2.5px rgb(0, 0, 0);
    color: rgb(220, 220, 220);
    /* align-items: center; */
}
.Main-body {
    font-size: calc(6px + 3vmin);
    -webkit-text-stroke: 1px rgb(0, 0, 0);
    font-weight: 500;
    color: rgb(173, 173, 173);
    /* align-items: center;
    justify-content: center; */
}
.Main-box {
    color: #000000;
    background-color: #ffffff;
    font-size: calc(6px + 2.3vmin);
    -webkit-text-stroke: 1px rgb(0, 0, 0);
    width: 90%;
    border: 5px solid black;
    display:inline-block
    /* align-items: center;
    justify-content: center; */
}
.clearer-text * {
    -webkit-text-stroke: unset !important;
    font-family: 'Comic Sans MS', 'Chalkboard SE', 'Comic Neue', sans-serif !important;
    letter-spacing: 0.35ch !important;
    word-spacing: 1.225ch !important; /* 3.5x letter-spacing */
    font-variant-ligatures: none; /* explicitly disable ligatures */
    font-weight: 600; /* demi-bold */
}

